Add a self-hostable Swagger UI HTML page in the backend as well pls base
